--- a/styles/dark-theme.css
+++ b/styles/dark-theme.css
@@ -1,3 +1,4 @@
+html.dark-theme,
 body .dark-theme {
   /* Principal Colors */
   --color-accent: #fafafa;
