--- a/styles/main-theme.css
+++ b/styles/main-theme.css
@@ -1,3 +1,4 @@
+html.main-theme,
 body .main-theme {
   /* Principal Colors */
   --color-accent: #000;
